TINY-12289: Fix toolbar button's tooltip remained visible (#10592)

--- a/modules/oxide/src/less/theme/components/toolbar-button/toolbar-button.less
+++ b/modules/oxide/src/less/theme/components/toolbar-button/toolbar-button.less
@@ -75,6 +75,10 @@
     text-transform: @toolbar-button-text-transform;
     width: @toolbar-button-width;
 
+    .tox-tbtn__icon-wrap {
+      pointer-events: none;
+    }
+
     @media (forced-colors: active) {
       &:hover,
       &.tox-tbtn:hover {
